# private-inference

./: .gitignore  Cargo.toml  README.md  balancing.pth  balancing_quantized.pth  balancing_weights.json  binary_model.json  binary_model.pth  binary_model_small.pth  binary_model_ultra_small.pth  codegen.py  deno.json  flake.nix  index.js  layers.py  main.py  main.rs  main.ts  model.pth  node.ts  package-lock.json  package.json  quantized_model.pth  train.py  utils.py  utils.ts
src/: main.rs
src/distributed/: demo.ts  inference.ts  node.ts  share-keys.ts  utils.ts
src/model/: binary.py  codegen.py  data.py  extract_weights.py  main.py  mnist_binary.py  model.py  quantizer.py
