[package]
name = "private-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
url = "2.5.8"

[[bin]]
name = "private-inference"
path = "main.rs"
